--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <table cellspacing="20">
         <tr>
             <td>
-                <img src="/test-modified.png" alt="man image" height="300" width="300">
+                <img src="/Images/test-modified.png" alt="man image" height="300" width="300">
             </td>
             <td>
                 <h1>Zito Urbieta</h1>
